--- a/functions/package.json
+++ b/functions/package.json
@@ -3,8 +3,9 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "chrono-node": "^1.3.4",
-    "firebase-admin": "^4.2.1",
-    "firebase-functions": "^0.5.9",
+    "express": "^4.16.2",
+    "firebase-admin": "^5.7.0",
+    "firebase-functions": "^0.8.0",
     "shortid": "^2.2.8"
   },
   "private": true
