--- a/functions/package.json
+++ b/functions/package.json
@@ -4,9 +4,12 @@
   "dependencies": {
     "chrono-node": "^1.3.4",
     "express": "^4.16.2",
-    "firebase-admin": "^5.12.1",
-    "firebase-functions": "^1.0.3",
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.6.1",
     "shortid": "^2.2.8"
+  },
+  "engines": {
+    "node": "10"
   },
   "private": true
 }
